syntax = "proto2";
package metapb;

import "metapb.proto";

enum CommandType {
    Invalid        = 0;
    Bootstrap      = 1;
    IsBootstrapped = 2;
    AllocId        = 3;
    GetMeta        = 4;
    PutMeta        = 5;
    DeleteMeta     = 6;
}

message BootstrapRequest {
    optional metapb.Node node     = 1;
    repeated metapb.Store stores  = 2;
    optional metapb.Region region = 3;
}

message BootstrapResponse {
    
}

message IsBootstrappedRequest {
    
}

message IsBootstrappedResponse {
    
}

enum MetaType {
    InvalidMeta      = 0;
    NodeType         = 1;
    StoreType        = 2;
    RegionType       = 3;
    PeerType         = 4;
}

message AllocIdRequest {
    optional MetaType meta_type   = 1;
}

message AllocIdResponse {
    optional MetaType meta_type   = 1;
    optional uint64 id            = 2;
}

message GetMetaRequest {
    optional MetaType meta_type    = 1;
    optional uint64 node_id        = 2;
    optional uint64 store_id       = 3;
    optional string region_key     = 4;
}

message GetMetaResponse {
    optional MetaType meta_type    = 1;
    optional metapb.Node node      = 2;
    optional metapb.Store store    = 3;
    optional metapb.Region region  = 4;

}

message PutMetaRequest {
    optional MetaType meta_type  = 1;
    optional metapb.Node node    = 2;
    optional metapb.Store store  = 3;
}

message PutMetaResponse {
    optional MetaType meta_type = 1;
}

message DeleteMetaRequest {
    optional MetaType meta_type  = 1;
    optional uint64 node_id      = 2;
    optional uint64 store_id     = 3;
}

message DeleteMetaResponse {
    optional MetaType meta_type = 1;
}

message RequestHeader {
    // 16 bytes, to distinguish request.  
    optional bytes uuid                = 1;
    optional uint64 cluster_id         = 2;
}

message ResponseHeader {
    // 16 bytes, to distinguish request.  
    optional bytes uuid                = 1;
    optional uint64 cluster_id         = 2;
    optional Error error               = 3;
}

message Request {
    optional RequestHeader header                  = 1;
    optional CommandType cmd_type                  = 2;
    optional BootstrapRequest bootstrap            = 3;
    optional IsBootstrappedRequest is_bootstrapped = 4;
    optional AllocIdRequest alloc_id               = 5;
    optional GetMetaRequest get_meta               = 6;
    optional PutMetaRequest put_meta               = 7;
    optional DeleteMetaRequest delete_meta         = 8;
}

message Response {
    optional ResponseHeader header                  = 1;
    optional CommandType cmd_type                   = 2;
    optional BootstrapResponse bootstrap            = 3;
    optional IsBootstrappedResponse is_bootstrapped = 4;
    optional AllocIdResponse alloc_id               = 5;
    optional GetMetaResponse get_meta               = 6;
    optional PutMetaResponse put_meta               = 7;
    optional DeleteMetaResponse delete_meta         = 8;
}

message BootstrappedError {
    
}

message Error {
    optional string message                 = 1;
    optional BootstrappedError bootstrapped = 2;
}